# demos

day1-demo-redis1/: README.md  README.txt  pom.xml
day2-demo-redis2/: REDME.txt  pom.xml
day3-demo-spring-configuration-and-bean-annotation/: pom.xml
day4-demo-redis3-redisTemplate/: pom.xml  readme.txt
day5-demo-rocketmq-basic1/: pom.xml
day5-demo-rocketmq-basic1/rocketmq-consumer/: pom.xml
day5-demo-rocketmq-basic1/rocketmq-producer/: pom.xml
day7-demo-redis-test-spring-factories/: pom.xml
demo0010-redis-no-configuration/: pom.xml
demo0011-redis-configuration-serializer/: pom.xml  readme.txt
demo0012-spring-boot-log4j2/: pom.xml  readme.txt
demo0013-jdk17/: pom.xml
demo0014-infura/: README.txt  pom.xml
demo0015-solidity/: pom.xml  readme.txt
demo0016-rust-101/: Cargo.toml
demo0016-rust-101/src/: demo001_test.rs  demo002_millionaire.rs  main.rs
demo0017-eureka-server/: pom.xml  readme.txt
demo0018-connect-pro-rbac/: pom.xml
demo0018-connect-pro-rbac/connect-pro-demo-rbac-8080/: pom.xml
demo6-demo-cors-of-springboot/: pom.xml  readme.txt
demo6-demo-cors-of-springboot/cors-test1-8080/: pom.xml
demo6-demo-cors-of-springboot/cors-test2-8081/: pom.xml
demo7-applicationlistener-contextrefreshevent/: pom.xml  readme.txt
demo8-applicationlistener-emailevent/: pom.xml  readme.txt
demo9-alibaba-fastjson/: pom.xml  readme.txt
paytm-interview/: README.md  pom.xml
pfg-util/: README.md  pom.xml
pfg-util/pfg-tdd-demo1-test-service/: README.md  pom.xml
pfg-util/pfg-tdd-demo2-test-controller/: README.md  pom.xml
(+138 files in other folders)
