[package]
name = "demo0016-rust-101"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poc-framework = "0.1.4"
solend-token-lending = "0.1.1"
spl-associated-token-account = "1.0.3"
spl-token = "3.2.0"
[patch.crates-io]
poc-framework = { path = "/Users/suwenjie/.cargo/registry/src/github.com-1ecc6299db9ec823/poc-framework-0.1.4/" }
solana-runtime = { path = "/Users/suwenjie/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-runtime-1.8.11/"}
solend-token-lending = { path = "/Users/suwenjie/.cargo/registry/src/github.com-1ecc6299db9ec823/solend-token-lending-0.1.1/"}
solana-program = { path = "/Users/suwenjie/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-program-1.8.11/" }
solana-runtime = { path = "/Users/suwenjie/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-runtime-1.8.11/" }
solana-bpf-loader-program = { path = "/Users/suwenjie/.cargo/registry/src/github.com-1ecc6299db9ec823/solana-bpf-loader-program-1.8.11/" }

